--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.InsertActivity">
+        tools:context=".views.EditActivity">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/member_name_top"
@@ -14,10 +14,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_input_layout"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/input_layout_top_level"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/profile_pic">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/member_name"
@@ -60,11 +60,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_input_layout"
             android:layout_marginStart="8dp"
-            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/contribution"
-            android:focusable="true">
+            app:layout_constraintTop_toBottomOf="@id/contribution">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/date"
@@ -78,16 +76,43 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="34dp"
+                    app:cornerRadius="10dp"
+                    android:text="Update"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    app:layout_constraintTop_toBottomOf="@id/day"
+                    app:layout_constraintStart_toEndOf="@+id/btn_delete"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:focusable="true">
+                </com.google.android.material.button.MaterialButton>
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn"
+            android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            app:cornerRadius="10dp"
+            android:text="Delete"
+            android:textStyle="bold"
             android:clickable="true"
-            android:text="pick date"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/day"
+            app:layout_constraintStart_toStartOf="parent"
             android:focusable="true">
         </com.google.android.material.button.MaterialButton>
+
+        <ImageView
+            android:id="@+id/profile_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@mipmap/ic_launcher"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
