--- a/app/src/main/res/layout/contribution_list.xml
+++ b/app/src/main/res/layout/contribution_list.xml
@@ -14,13 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageDeal"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:srcCompat="@mipmap/ic_launcher"/>-->
+    <ImageView
+        android:id="@+id/profile_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@mipmap/ic_launcher"/>
 
 
     <TextView
@@ -64,5 +65,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
-
 </layout>
