--- a/app/src/main/res/menu/insert_menu.xml
+++ b/app/src/main/res/menu/insert_menu.xml
@@ -3,7 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/insert_menu"
         android:title="@string/insert_menu"
-        app:showAsAction="always">
+        app:showAsAction="collapseActionView">
     </item>
+
+    <item android:id="@+id/profile"
+        android:title="@string/my_profile_menu"
+        app:showAsAction="collapseActionView">
+
+    </item>
+
 
 </menu>
