--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
 <resources>
     <dimen name="text_input_layout">16dp</dimen>
     <dimen name="input_layout_top_level">24dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="text_margin">20dp</dimen>
+    <dimen name="text_padding">10dp</dimen>
+    <dimen name="button_text_size">20sp</dimen>
 </resources>
